# discord-sound-streamer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.production.toml  pyproject.toml  scripts.py
.github/workflows/: pyright.yml  ruff.yml
app/: bot.py
discord_sound_streamer/: bot.py  config.py  logger.py  websocket.py
discord_sound_streamer/clients/invidious/: client.py
discord_sound_streamer/clients/invidious/schemas/: video.py
discord_sound_streamer/commands/: __init__.py  play.py  search.py
discord_sound_streamer/datastore/: in_memory.py
discord_sound_streamer/datastore/models/: commands.py  search.py
discord_sound_streamer/datastore/operations/: commands.py  search.py
discord_sound_streamer/polymorphs/: responder.py
discord_sound_streamer/services/: commands.py  embed.py  interaction.py  lava.py  play.py  voice.py  youtube.py
lavalink/: Dockerfile  application.yml  fly.production.toml  replace_vars.sh  start.sh
potoken-generator/: Dockerfile  fly.production.toml
youtube-trusted-session-generator/: Dockerfile  fly.production.toml
