[tool.poetry]
name = "discord_sound_streamer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
start = "discord_sound_streamer.bot:start"

[tool.poetry.dependencies]
python = "~3.10"
hikari = "2.0.0-alpha.105"
hikari-tanjun = "2.3.1-alpha.1"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
lavaplayer = "^1.0.5-alpha.0"
types-retry = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict_optional = true
show_error_codes = true
show_column_numbers = true
warn_no_return = true
# disallow_any_unimported = true

# warn_unused_configs = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_untyped_decorators = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_return_any = true
# strict_equality = true