[tool.poetry]
name = "discord_sound_streamer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
start = "discord_sound_streamer.bot:start"

[tool.poetry.dependencies]
python = "~3.10"
hikari = "2.0.0-alpha.105"
hikari-tanjun = "2.3.1-alpha.1"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
lavaplayer = "^1.0.8a0"
types-retry = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
